# guidebook-todo

./: Cargo.toml  LICENSE  README.md  SPEC.md  justfile
.github/: copilot-instructions.md
scripts/: publish.sh
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs  init.rs  mod.rs
src/config/: colors.rs  defaults.rs  mod.rs
src/core/: filters.rs  git.rs  mod.rs  storage.rs  todo.rs
src/display/: detail.rs  mod.rs  table.rs
src/tui/: add_todo.rs  app.rs  edit_todo.rs  events.rs  mod.rs  search.rs
src/tui/components/: input.rs  list.rs  mod.rs  select.rs  textarea.rs
src/tui/forms/: field_manager.rs  form_renderer.rs  mod.rs  terminal_runner.rs  todo_form.rs
